crates/wx-compiler/src/tir/snapshots/wx_compiler__tir__tests__generic_struct_init_with_type_args.snap
---
source: crates/wx-compiler/src/tir/tests.rs
expression: case.tir
---
type_pool:
  - Error
  - Unit
  - Never
  - Unknown
  - U8
  - I8
  - U16
  - I16
  - U32
  - I32
  - U64
  - I64
  - F32
  - F64
  - Bool
  - Char
  - TypeParam:
      owner:
        Struct: 0
      param_index: 0
  - Struct:
      struct_index: 0
      args:
        - 9
  - Function:
      signature:
        items:
          - 17
        params_count: 0
diagnostics: []
functions:
  - id: 1
    file_id: 0
    pub_span: ~
    source: Internal
    origin: Free
    type_params: []
    signature_index: 18
    name:
      inner: 5
      span:
        start: 42
        end: 46
    params: []
    result:
      inner: 17
      span:
        start: 52
        end: 61
    accesses:
      - caller: ~
        kind: Reference
        file_id: 0
        span:
          start: 116
          end: 120
    attributes: []
    body:
      stack:
        scopes:
          - kind: Block
            label: ~
            parent: ~
            locals: []
            inferred_type: 17
            expected_type: 17
      block:
        kind:
          Block:
            scope_index: 0
            expressions: []
            result:
              kind:
                StructInit:
                  struct_index: 0
                  fields:
                    - kind:
                        Int:
                          value: 1
                      ty: 9
                      span:
                        start: 90
                        end: 91
                    - kind:
                        Int:
                          value: 2
                      ty: 9
                      span:
                        start: 101
                        end: 102
              ty: 17
              span:
                start: 68
                end: 104
        ty: 17
        span:
          start: 62
          end: 106
globals: []
memories: []
import_modules: []
enums: []
modules: []
exports:
  5:
    Function:
      internal_name:
        inner: 5
        span:
          start: 116
          end: 120
      external_name: ~
      id: 1
structs:
  - file_id: 0
    pub_span: ~
    name:
      inner: 1
      span:
        start: 7
        end: 11
    type_params:
      - name: 2
        bounds: []
    fields:
      - name:
          inner: 3
          span:
            start: 17
            end: 22
        ty:
          inner: 16
          span:
            start: 24
            end: 25
      - name:
          inner: 4
          span:
            start: 27
            end: 33
        ty:
          inner: 16
          span:
            start: 35
            end: 36
    lookup:
      3: 0
      4: 1
    accesses:
      - file_id: 0
        span:
          start: 52
          end: 61
      - file_id: 0
        span:
          start: 68
          end: 72
impl_members: {}
traits: []
trait_impls: []
trait_impl_lookup: {}
type_trait_impls: {}
constants: []
